--- a/src/components/ui/menu/menu.module.scss
+++ b/src/components/ui/menu/menu.module.scss
@@ -142,6 +142,7 @@
         background-position: center;
         background-repeat: no-repeat;
         background-color: var(--white-color);
+        cursor: pointer;
         img {
           width: 24px;
           height: 24px;
