--- a/src/components/ui/navbar/navbar.module.scss
+++ b/src/components/ui/navbar/navbar.module.scss
@@ -37,13 +37,15 @@
   .icon {
     width: 24px;
     height: 24px;
-    opacity: 0.5;
+    opacity: 0.7;
     &.menu {
       transform: rotate(-90deg);
       transition: var(--normal-transition);
       background-image: url("../../../images/bar-chart-2.svg");
       background-color: var(--white-color);
+      background-repeat: no-repeat;
       border: none;
+      cursor: pointer;
       &:hover {
         transform: rotate(-90deg) scale(1.3);
         opacity: 1;
